style.css
@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');

* {
    margin: 0;
    padding: 0;
    list-style: none;
    text-decoration: none;
    --first-theme-color: #AB433F;
    --secondary-color: #E7D7C1;
    --second-theme-color: #003D5B;
    --pixel-font: 'Press Start 2P', cursive;
    --second-font: 'Josefin Sans', sans-serif;
    font-family: var(--second-font);
    box-sizing: border-box;
    scroll-behavior: smooth;
}


/* SECTION ABOUT ME SAVERIO */

/* *
body {font-family: var(--pixel-font);} */
.mySlides {display: none;}
/* img {; max-width: 100vw;} */

.about-me {
  background-color: var(--secondary-color);
  width: auto;
  /* height: 3Ovh; */
  margin: auto;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.about-me h2 {
  font-family: 'Press Start 2P', cursive;
  font-size: 8vw;
  text-align: left;
  margin-top: 32px;
  color: var(--first-theme-color);
  padding: 0 16px 0 16px;
}

.description {
  font-family: var(--second-font);
  color: var(--first-theme-color);
  text-align:justify;
  margin-top: 10px;
  margin-bottom: 20px;
  line-height: normal;
  font-size: 20px;
  display: flex;
  padding: 0 16px 0 16px;
  }

  .slideshow-container img {
  max-width: 100vw;
  height: auto; 
  vertical-align: middle
}

.slideshow img.active {
  display: block;
  
}

/* Slideshow container */
.slideshow-container {
  
  position: relative;
  margin: auto;
} 


/* Fading animation */
.fade {
  animation-name: fade;
  animation-duration: 1.5s;
}

@keyframes fade {
  from {opacity: .4} 
  to {opacity: 1}
}

/* SECTION EXPERIENCE TOM */

#sec-experience {
    /* background-color: var(--first-theme-color); */
    padding: 0px 20px 32px 20px;
    height: 100vh;
}

#sec-experience h3 {
    color: var(--secondary-color);
    font-size: 8vw;
    padding: 48px 0px 48px 0px;
    font-family: var(--pixel-font);
}


#card-container {
    display: flex;
    width: 100%;
    height: 70vh;
    overflow-x: scroll;
    overflow-y: hidden;
    margin: auto;
    scroll-snap-type: x mandatory;
    border-radius: 40px;
    scroll-behavior: smooth;
    
}

#card-container::-webkit-scrollbar{
    display: none;
  }

.card {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    background-color: var(--secondary-color);
    width: 100%;
    max-width: 338px;
    height: 100%;
    border-radius: 40px;
    margin: 0px 8px 32px 8px;
    padding: 16px 24px 16px;
    scroll-snap-align: center;

}

.card h4 {
    color: var(--first-theme-color);
    font-family: 'Press Start 2P', cursive;
    width: 100%;
    margin: 24px auto 24px;
    display: flex;
    align-items: flex-end;
    font-size: 2vh;
}

.card img {
    max-width: 100%;
    max-height: 50%;
    margin: 0 auto;
    border-radius: 20px;
}

.card p {
    font-size: 20px;
    color: var(--first-theme-color);
    width: 290px;
    margin: 32px auto;
    text-align: justify;
}

#indicator-container {
    display: flex;
    width: 50%;
    justify-content: center;
    margin: 16px auto;
}
.slide-indicator {
    height: 10px;
    width: 10px;
    background-color: var(--secondary-color);
    opacity: 0.6;
    border-radius: 50%;
    margin: 16px 8px 8px 8px;

}

.indic-active {
    transform: scale(1.6);
    opacity: 1;
}

#Omar {
    height: 100vh;
   }

  /* NAVIGATION STYLES */
  nav {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 4vh;
  }
  
  .menu {
      background-color: #ab433f73;
      backdrop-filter: blur(10px);
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
      position: absolute;
      top: 40px;
      left: 0;
      width: 100%;
      height: 0;
      overflow: hidden;
      transition: 0.3s ease-in-out;
  }
  
  .menu li {
    margin: 0;
    padding: 0.5rem;
  }
  
  .menu li a {
    color: var(--secondary-color);
    text-decoration: none;
    font-family: var(--pixel-font);
    font-size: 20px;

  }
  
  /* MENU BUTTON STYLES */
  .menu-btn {
    cursor: pointer;
    display: flex;
    flex-direction: column;
    height: 24px;
    width: 30px;
    
  }
  
  .menu-btn__lines {
    
    background-color: var(--secondary-color);
    height: 4px;
    width: 100%;
    margin: 3px;
    transition: transform 0.3s ease-in-out;
  }

  /* OPEN MENU BUTTON STYLES */
  .menu-btn.open .menu-btn__lines:nth-child(1) {
    transform: translateY(8px) rotate(45deg);
  }
  .menu-btn.open .menu-btn__lines:nth-child(2) {
    opacity: 0;
  }
  .menu-btn.open .menu-btn__lines:nth-child(3) {
    transform: translateY(-8px) rotate(-45deg);
  } 
  
    /* CONTACT ME BUTTON */

  .contact {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: var(--secondary-color);
    height: 2.5rem;
    width: 5.7rem;
    border-radius: 1.7rem;
  }

  .contact a {
    font-size: 15px;
  }


  /* Main PAGE */

   h1, h2 {
    font-family: var(--pixel-font);
    text-align: center;
    padding: 4vh 0 7.5vh 0;
    color: var(--secondary-color);
}

h1 {
    font-size: 10vw;
}
h2 {
    font-size: 7vw;
}

.Mario {
  font-size: 15vw;
  font-family: var(--pixel-font);
}

.img {
    display: flex;
    flex-direction: row;
    justify-content: center;
    width: 80vw;
    height: 80vw;
    background-image: url("assets/mario_home.png");
    background-position: center;
    background-size: cover;
    border-radius: 50%;
    background-color: var(--secondary-color);
    
}


.page {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
}

/* CHECKBOX */
  .toggle-button {
    display: flex;
    justify-content: center;

  }

   .toggle-theme {
    display: flex;
    position: relative;
    justify-content: flex-start;
    align-items: center;
    width: 50px;
    height: 25px;
    background-color: var(--secondary-color);
    border-radius: 20px;
    cursor: pointer;
  }
  
  .toggle-theme span {
    width: 21px;
    height: 21px;
    margin-left: 2px;
    border-radius: 50%;
    transition: transform 0.4s ease-in-out;
  }
  
  input[type="checkbox"] {
    opacity: 0;
    width: 0;
    height: 0;
  }
  

  .blue-theme {
    background-color: var(--second-theme-color) ;
  }

  .red-theme {
    background-color: var(--first-theme-color);
  }
  .red-theme-font {
    color: var(--first-theme-color)
  }
  .blue-theme-font {
    color: var(--second-theme-color);
  }
  
  .blue-theme-menu {
    background-color: #003d5b6e;
  }

  .span-move {
    transform: translateX(120%);
    background-color: var(--first-theme-color);
  }

  .button-color-red {
    background-color: var(--first-theme-color) ;
  }
  .button-color-blue {
    background-color: var(--second-theme-color);
  }


/* -----------------------------------------------------STYLE DIV----------------------------------------------------- */

div#hobbies{
    background-color: var(--secondary-color);
}

/* div#getInTouch{
    background-color: var(--first-theme-color);
} */


/* -----------------------------------------------------STYLE TEXTES----------------------------------------------------- */

section#hobbies h3{
    font-family: 'Press Start 2P', cursive;
    font-style: normal;
    font-weight: 400;
    font-size: 7vw;
    padding-left: 5vw;
    padding-top: 5vw;
}

div#hobbies h3{
    color : var(--first-theme-color);
    padding-left: 7.5vw;
    padding-top: 48px;
}

div#getInTouch h3{
  padding-left: 7.5vw;
}


div#getInTouch h3{
    color : var(--secondary-color);
}

section#hobbies p {
    font-size : 4vw;



}

/* -----------------------------------------------------STYLE HOBBIES----------------------------------------------------- */

.squareList {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    width: 80%;
    margin : auto;
    margin-top: 10vw;

}

.square{
    width: 85vw ;
    height: 85vw;
    margin-bottom: 10vw;
    border-radius: 30px;
    justify-content: center;
    display: flex;
    align-items: center;
    text-align: justify;
    justify-content: center;
    padding-left: 5.5vw;
    padding-right: 5.5vw;
    transform-style: preserve-3d;
}


.textUpsideDown{
    transform: scaleX(-1);
}

/* -------------STYLE IMAGE FOOTBALL----------- */

.imageFootball{
    background: url("sources/football.png");
    background-repeat: cover;
    background-size: contain;
    color : transparent;
    transition: transform 0.6s;
    transform-style: preserve-3d;
    backface-visibility: hidden;



}


/* -------------STYLE IMAGE VIDEOGAME----------- */

.imageVideoGame{
    background: url("sources/videogames.png");
    background-size: auto 100%; 
    color : transparent;
    transition: transform 0.6s;
    transform-style: preserve-3d;
    backface-visibility: hidden;
    }
    
    
/* -------------STYLE IMAGE FISHING----------- */

.imageFishing{
    background: url("sources/fishing.png");
    background-size: auto 100%; 
    color : transparent;
    transition: transform 0.6s;
    transform-style: preserve-3d;
    backface-visibility: hidden;

    }

    
/* -------------STYLES TEXT-------------------- */
    .text{
        background: none;
        background-color: var(--first-theme-color);
        color : var(--secondary-color);
        transform: rotateY(180deg);
        transition-duration: 0.6s;
        transform-style: preserve-3d;
    }


    

/* -----------------------------------------------------STYLE GETINTOUCH----------------------------------------------------- */

ul#logos {

    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin : auto;
    margin-top: 50px;
    padding-bottom: 30px;
}

div#logos{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: 85vw;
    margin : auto;
    padding-top: 10vw;
    padding-bottom: 10vw;
    align-items: center;
}

.logo{
        width: 15% ;
        height: 15%;
}

